Remove beginning slashes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>FaceDetectionJS</title>
 
     <!-- App2 references -->
-    <link href="/css/index.css" rel="stylesheet" />
-    <script src="/js/index.js"></script>
+    <link href="css/index.css" rel="stylesheet" />
+    <script src="js/index.js"></script>
 </head>
 <body>
     <div id="video">
