--- a/default.html
+++ b/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>FaceDetectionJS</title>
 
-    <!-- App2 references -->
+    <!-- FaceDetectionJS references -->
     <link href="/css/default.css" rel="stylesheet" />
     <script src="/js/default.js"></script>
 </head>
