--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>FaceDetectionJS</title>
 
-    <!-- App2 references -->
+    <!-- FaceDetectionJS references -->
     <link href="css/index.css" rel="stylesheet" />
     <script src="js/index.js"></script>
 </head>
