Added canvas element

--- a/default.html
+++ b/default.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -11,6 +11,7 @@
 <body>
     <div id="video">
         <video id="cameraPreview" class="cameraPreview"></video>
+        <canvas id="facesCanvas"></canvas>
     </div>
 </body>
 </html>
