Added canvas element

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>FaceDetectionJS</title>
 
     <!-- FaceDetectionJS references -->
-    <link href="css/index.css" rel="stylesheet" />
-    <script src="js/index.js"></script>
+    <link href="/css/default.css" rel="stylesheet" />
+    <script src="/js/default.js"></script>
 </head>
 <body>
     <div id="video">
         <video id="cameraPreview" class="cameraPreview"></video>
+        <canvas id="facesCanvas"></canvas>
     </div>
 </body>
 </html>
